--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,9 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.hy.customview.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:hardwareAccelerated="false"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
