--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,19 +4,14 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk
-        android:minSdkVersion="8"
-        android:targetSdkVersion="17" />
-
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/Theme.AppCompat.Light" >
         <activity
             android:name="com.hy.customview.MainActivity"
             android:label="@string/app_name"
-            android:hardwareAccelerated="false"
             >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,6 +19,24 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activity.ValidViewActivity"
+                  android:label="自定义View(一)---验证码">
+        </activity>
+
+        <activity android:name=".activity.WaveViewActivity"
+            android:label="自定义View(二)---泡泡窗">
+        </activity>
+
+        <activity android:name=".activity.PopupViewActivity"
+                  android:label="自定义View(三)---波浪View">
+        </activity>
+
+        <activity android:name=".activity.CirclePercentViewActivity"
+                  android:label="自定义View(四)---圆形百分比进度条">
+        </activity>
+
+
+
     </application>
 
 </manifest>
