--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,9 @@
                   android:label="自定义View(五)---简约折线图">
         </activity>
 
+        <activity android:name=".activity.PanelViewActivity"
+                  android:label="自定义View(五)---仪表盘">
+        </activity>
 
 
     </application>
