--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,12 @@
         <activity android:name=".activity.LoadSuccessViewActivity"
                   android:label="自定义View(六)---loading成功动画view"></activity>
 
+        <activity android:name=".activity.TouchActivity"
+                  android:label="自定义View(七)---神奇的赛贝尔曲线"></activity>
+
+        <activity android:name=".activity.CleanActivity"
+                  android:label="自定义View(八)---360内存清理效果"></activity>
+
 
     </application>
 
