--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.AppCompat.Light" >
+        android:theme="@style/Theme.AppCompat.Light"
+        android:hardwareAccelerated="false">
         <activity
             android:name="com.hy.customview.MainActivity"
             android:label="@string/app_name"
@@ -53,6 +54,9 @@
 
         <activity android:name=".activity.CustomViewViewActivity"
                   android:label="自定义View(九)---简单的圆形扩散动画View"></activity>
+
+        <activity android:name=".activity.WeChatEyeActivity"
+                  android:label="自定义View(九)---微信下拉眼睛"></activity>
 
 
     </application>
